fixed large distance between buttons

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <a href="https://github.com/Ayush-Kumar91221">
                     <img src="./assests/images/Github logo.png" alt="LinkedIn" class="scale-on-hover shadow-md">
                 </a>
-                <div class="flex gap-10 flex-wrap items-center justify-center mt-[10vh]">
+                <div class="flex leading-[5rem] md:gap-10 flex-wrap items-center justify-center mt-[10vh]">
                     <a href="#about"><button class="scale-on-hover w-[200px] bg-white text-teal text-2xl p-4 rounded-lg">Read more</button></a>
                     <a href="#Contact"><button class="scale-on-hover w-[200px] border-2 border-white text-white text-2xl p-4 rounded-lg">Contact</button></a>
                 </div>
