fixed large fonts in phone and other responsiveness

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <!-- less than 1000px starts  -->
     <div id="sidebar-mobile">
-        <a href="\#" class="hamburger-btn">
+        <a href="#" class="hamburger-btn">
             <i class="material-icons" id="hamburger">menu</i>
         </a>
         <div class="w-full">
